--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "firebase": "^10.12.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
+    "next-ui": "^0.9.0",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
